<resources>
    <string name="app_name">DermaAI_Android_14.0</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="header_title">DermaAI</string>
    <string name="nav_header_subtitle">Schnell Läsionen erkennen!</string>
    <string name="home_describtion">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</string>
    <string name="home_describtion2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="model_title">Models</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Results</string>
    <string name="menu_photo">Photo</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_admin">Admin</string>
    <string name="menu_models">Models</string>
    <string name="admin_report_title">Report anfordern</string>
    <string name="admin_report_all">Report für alle Modelle anfordern:</string>
    <string name="admin_report_one">Report für ein spezifisches Modelle anfordern:</string>
    <string name="admin_report_all_btn">alle Reports!</string>
    <string name="admin_report_one_btn">spezifischer Report!</string>
    <string name="home_whatIsDermaAI">Was ist DermaAI?</string>
    <string name="home_purposeDesc">DermaAI ist eine Android-App, die KI nutzt, um pigmentierte Hautläsionen zu analysieren und zu klassifizieren.Du kannst Bilder deiner Hautläsionen hochladen, und die App liefert in Echtzeit Hinweise, indem es den Hautlässion einen Wert zuteilt, der aussagt wie sicher es ist, dass es sich um einen bösartigen oder gutartigen Befund handelt.</string>
    <string name="home_desktopApp">Zusätlich zur Android-App stellt dieses Projekt noch eine Desktop-Anwendung bereit, die unter folgendem Link erhältlich ist!</string>
    <string name="home_desktopAppLink">Hier!</string>
    <string name="login_staylogged">Stay logged</string>
    <string name="login_loggedIn">In!</string>
    <string name="login_loggedOut">Out!</string>
    <string name="sync_title">Sync Images with DB</string>
    <string name="fragment_loginBtn">Login</string>
    <string name="fragment_RegisterBtn">Register</string>
    <string name="fragment_SwitchToRegisterBtn">Switch to Register</string>
    <string name="fragment_SwitchToLoginBtn">Switch to Login</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_results">View Results</string>
    <string name="app_title">DermaAI</string>
    <string name="camera_shoot">Shoot!</string>
    <string name="base">baseurl.com/</string>
    <string name="loginController">loginController/</string>
    <string name="loginEndpoint">login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mfa_header">Two-Factor Authentication</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">Settings</string>
    <string name="two_factor_authentication_header">Two-Factor Authentication</string>
    <string name="enable_2fa_title">2FA</string>
    <string name="enable_2fa_on">enabled</string>
    <string name="enable_2fa_off">disabled</string>
    <string name="enter_key">Enter Key to enable 2FA</string>
    <string name="verify_key">Verify!</string>
    <string name="mfa_disabled">Disabled</string>
    <string name="logout_header">Logout</string>
    <string name="resize_resize">Resize via AI</string>
    <string name="resize_accept">Accept and Send</string>
    <string name="admin_retrain">Retrain!</string>
    <string name="admin_panel">Admin-Panel</string>
    <string name="admin_retrain_all">Retrain All!</string>
    <string name="admin_parameter">Wichtige Parameter</string>
    <string name="admin_retrain_all_desc">Retrain All dient dazu, alle KI-Modelle neu zu trainieren, basierend auf den Trainingsdaten, die sich in der Datenbank befinden. </string>
    <string name="admin_epoch">Epochs gibt dabei die Anzahl der Trainingsdurchläufe an, die das Modell durchlaufen soll. Eine Epoche ist ein vollständiger Durchlauf durch alle Trainingsdaten. Je höher dieser Wert, desto länger dauert das Training!</string>
    <string name="admin_reshape_size">Bei Reshape Size handelt es sich um den zweiten Parameter, der angibt ob die Eingabedaten für das Modell vor dem Training in eine bestimmte Größe umgeformt werden sollen, die sich eventuell besser für das Modell eignen. Ein komplexer Umformungsprozess kann mehr Zeit in Anspruch nehmen, während ein einfache Umformung die Trainingsdauer verringern kann, aufgrund des geringeren Aufbereitsungsaufwands.</string>
    <string name="admin_retrain_desc">Retrain dient dazu, ein spezifisches KI-Modell neu zu trainieren, basierend auf den Trainingsdaten in der Datenbank. Zusätzlich müssen der Trainer und das Modell angegeben werden.</string>
    <string name="admin_epoch_title">Epoch:</string>
    <string name="admin_reshape_size_title">Reshape Size:</string>
    <string name="photo_header">Anweisungen!</string>
    <string name="photo_desc">Zusammenfassung der wichtigsten Tipps für das Aufnehmen eines hochwertigen Fotos Ihrer Hautläsion:</string>
    <string name="photo_tips_short_1">
    • Gute Beleuchtung verwenden\n
    • Korrekte Kamera-Positionierung\n
    • Fokussierung auf die Hautläsion\n
    • Ablenkungen minimieren\n
    </string>
    <string name="photo_tips_short_2">
    • Saubere Kameralinse verwenden\n
    • Vermeidung von Blendungen\n
    • Neutrale Umgebung wählen\n
    • Bilder überprüfen
    </string>
    <string name="tutorial_header">Tutorial!</string>
    <string name="photo_tip_title_1">Gute Beleuchtung verwenden</string>
    <string name="photo_tip_title_2">Kamera richtig positionieren</string>
    <string name="photo_tip_title_3">Fokus auf Hautläsion setzen</string>
    <string name="photo_tip_title_4">Ablenkungen minimieren</string>
    <string name="photo_tip_title_5">Saubere Linse verwenden</string>
    <string name="photo_tip_title_6">Blendungen vermeiden</string>
    <string name="photo_tip_title_7">Neutrale Umgebung wählen</string>
    <string name="photo_tip_title_8">Bilder überprüfen</string>
    <string name="photo_tip_desc_1">Sorgen Sie für eine gleichmäßige und ausreichende Beleuchtung, um Details sichtbar zu machen.</string>
    <string name="photo_tip_desc_2">Positionieren Sie die Kamera so, dass die Hautläsion gut zentriert und scharf erkennbar ist. Halten Sie dazu die Kamera ruhig und direkt über der Hautläsion </string>
    <string name="photo_tip_desc_3">Stellen Sie sicher, dass die Kamera auf die Hautläsion fokussiert ist, um scharfe Bilder zu erhalten.</string>
    <string name="photo_tip_desc_4">Vermeiden Sie störende Objekte im Hintergrund, die die KI-Analyse beeinflussen könnten.</string>
    <string name="photo_tip_desc_5">Reinigen Sie die Kameralinse vor der Aufnahme für klare und detailreiche Bilder.</string>
    <string name="photo_tip_desc_6">Vermeiden Sie direkte Blendungen oder Lichteinwirkung auf die Kamera.</string>
    <string name="photo_tip_desc_7">Wählen Sie eine Umgebung mit hohem Kontrast, um die Hautläsion klar hervorzuheben.</string>
    <string name="photo_tip_desc_8">Überprüfen Sie die Bilder nach der Aufnahme, um sicherzustellen, dass die Hautläsion deutlich sichtbar ist, und alle beschrieben Kriterien erfüllen.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="positive_negative">Positive/Negative</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>