<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:textColor="@android:color/white"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_storage"
            android:title="@string/menu_gallery"
            android:textColor="@android:color/white"/>
        <item
            android:id="@+id/nav_photo"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_photo"
            android:textColor="@android:color/white"/>

        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/menu_tutorial"
            android:textColor="@android:color/white"/>


        <item
            android:id="@+id/nav_models"
            android:icon="@drawable/ic_admin"
            android:title="@string/menu_models"
            android:visible="true"
            android:textColor="@android:color/white"/>


        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_admin"
            android:title="@string/menu_admin"
            android:visible="true"
            android:textColor="@android:color/white"/>

    </group>

</menu>
