<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.dermaai_android_140.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.dermaai_android_140.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_photo"
        android:name="com.example.dermaai_android_140.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.example.dermaai_android_140.ui.tutorial.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.dermaai_android_140.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

</navigation>