<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="367dp"
        android:layout_height="54dp"
        android:text="@string/tutorial_header"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.066" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="330sp"
        android:layout_height="597dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:elevation="2dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scrollbar_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2">

        <LinearLayout
            android:layout_width="330sp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingBottom="2dp"
                android:text="@string/photo_tip_title_1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_1" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />


            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_3" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_4" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_5" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_6"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_6" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_7"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_7" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/photo_tip_title_8"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/photo_tip_desc_8" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>