<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:gravity="center"
        android:text="@string/admin_panel"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ScrollView wraps ALL content below textView9 -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Content from original ScrollView -->

            <TextView
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingBottom="2dp"
                android:text="@string/admin_retrain"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:textSize="19sp" />

            <ImageView
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <!-- Moved elements from outside the original ScrollView -->

            <TextView
                android:id="@+id/textView7"
                android:layout_width="312dp"
                android:layout_height="136dp"
                android:text="@string/admin_retrain_desc"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/retrainBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/admin_retrain" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="16dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="258dp"
                android:layout_height="39dp"
                android:text="@string/admin_retrain_all"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="310dp"
                android:layout_height="111dp"
                android:text="@string/admin_retrain_all_desc"
                android:textSize="16sp" />

            <Button
                android:id="@+id/retrainAllBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/admin_retrain_all" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="258dp"
                android:layout_height="39dp"
                android:text="@string/admin_parameter"
                android:textSize="19sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:srcCompat="@drawable/background_fragment_line_2" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/admin_epoch_title"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/admin_epoch"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/admin_reshape_size_title"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/admin_reshape_size" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_report_title"
                android:textSize="19sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/background_fragment_line_2" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="21dp"
        android:layout_height="55dp"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_fragment_half_circle" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="19dp"
        android:layout_height="51dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_fragment_half_circle_2" />

</androidx.constraintlayout.widget.ConstraintLayout>