<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.photo.PhotoFragment"
    android:background="@drawable/background_gallery">

    <Button
        android:id="@+id/takePhotoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_photo"
        app:icon="@drawable/ic_menu_camera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

    <TextView
        android:id="@+id/photoHeaderView"
        android:layout_width="407dp"
        android:layout_height="75dp"
        android:layout_marginBottom="176dp"
        android:gravity="center"
        android:text="@string/photo_header"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="361dp"
        android:layout_height="63dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="457dp"
        android:text="@string/photo_desc"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoHeaderView"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="306dp"
        android:layout_height="107dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="181dp"
        android:text="@string/photo_tips_short_1"
        app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        android:lineSpacingExtra="7dp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="272dp"
        android:layout_height="90dp"
        android:layout_marginBottom="160dp"
        android:text="@string/photo_tips_short_2"
        app:layout_constraintBottom_toTopOf="@+id/takePhotoBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="1.0"
        android:lineSpacingExtra="7dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>